added download part

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <!---button to download resume-->
                  <div class="container-fluid">
                     <div class="row justify-content-center btn btn-dark">
-                        <a href="#" style="color: white; width: 100%;">Download my CV</a>
+                        <a href="./MOHAMMED MISHKATH.docx" style="color: white; width: 100%;">Download my CV</a>
                     </div>
                 </div>
           </div>
