--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <title>Portfiolio</title>
     </head>
-    <body id="home" data-spy="scroll" data-target=".navbar">
+    <body id="home" data-bs-spy="scroll" data-bs-target=".navbar">
         <!---loader-->
  <div class="loader-wrapper">
     <div class="loader"></div>
@@ -31,7 +31,7 @@
                             <button class="navbar-toggler custom-toggler" data-toggle="collapse" data-target="#navbarcollapse"><span class="navbar-toggler-icon"></span></button>
                                 <div class="collapse navbar-collapse" id="navbarcollapse">
                                     <ul class="navbar-nav ml-auto">
-                                        <li class="nav-item">
+                                        <li class="nav-item active">
                                             <a class="nav-link" href="#home" onclick="displayNavbar()">Home</a>
                                         </li>
                                         <li class="nav-item">
@@ -65,7 +65,8 @@
 <!--About section-->
 <section id="about">
     <div class="container">
-        <h3 class="heading mt-4 mb-4">About Me</h3> 
+        <h3 class="heading mt-4 mb-4"><span>About Me</span></h3> 
+        <div class="header-bar waypoint animated slide-in-left" data-animation="slide-in-left" data-delay=".5s" style="animation-delay: 0.5s;"></div>
         <div class=" "></div>
         <p class="bold-text"></p>
      </div>  
@@ -73,16 +74,16 @@
      <div class="container">
         <div class="row mt-4 mb-4">
           <div class="col-md-6">
-            <h3 class="heading mt-4 mb-4" data-aos="fade-right">Interests </h3> <hr/>
+            <h3 class="heading mt-4 mb-4" data-aos="fade-right"><span>Interests </span></h3> <hr/>
             <div class="row" Style="width:100%;">
                 <div class="card-deck" >
-                    <div class="card mr-4"  data-aos="fade-right" data-aos-duration="3000" id="interestCard1">
+                    <div class="card m-4"  data-aos="fade-right" data-aos-duration="3000" id="interestCard1">
                         <img class="card-img-top img-fluid " src="./images/computerHardware.jpg" alt="Card image cap">
                         <div class="card-body interestCardBody">
                         <h4 class="card-title">Computer Hardware</h4>
                         </div>
                     </div>
-                    <div class="card ml-4"  data-aos="fade-right" data-aos-duration="2000" id="interestCard2">
+                    <div class="card m-4"  data-aos="fade-right" data-aos-duration="2000" id="interestCard2">
                         <img class="card-img-top img-fluid " src="./images/gaming.jpg" alt="Card image cap">
                         <div class="card-body interestCardBody">
                         <h4 class="card-title">Gaming</h4>
@@ -92,13 +93,13 @@
             </div>
             <div class="row" Style="width:100%;">
                 <div class="card-deck" >
-                    <div class="card mr-4"  data-aos="fade-right" data-aos-duration="3000" id="interestCard3">
+                    <div class="card m-4"  data-aos="fade-right" data-aos-duration="3000" id="interestCard3">
                         <img class="card-img-top img-fluid " src="./images/exploring.jpg" alt="Card image cap">
                         <div class="card-body interestCardBody">
                         <h4 class="card-title">Exploring</h4>
                         </div>
                     </div>
-                    <div class="card ml-4"  data-aos="fade-right" data-aos-duration="2000" id="interestCard4">
+                    <div class="card m-4"  data-aos="fade-right" data-aos-duration="2000" id="interestCard4">
                         <img class="card-img-top img-fluid " src="./images/reading.jpg" alt="Card image cap">
                         <div class="card-body interestCardBody">
                         <h4 class="card-title">Reading</h4>
@@ -108,38 +109,39 @@
             </div>
           </div>
           <div class="col-md-6">
-            <h3 class="heading mt-4 mb-4" data-aos="fade-left" >Skills</h3> <hr/>
-                <div class="container-fluid">
-                    <div class="row", id="row1">
-                        <div class="col-lg-3 col-sm-6">
-                            <img src="./images/html.png" alt="HTML 5" class="skicon">  
-                            <p class="ml-2">HTML 5</p>
+            <h3 class="heading mt-4 mb-4" data-aos="fade-left"> <span>Skills</span></h3> <hr/>
+                <div class="container ">
+                    <div class="d-flex flex-row justify-content-around", id="row1">
+                        <div class="skills" id="html">
+                            <div>
+                                <p>HTML 5</p>
+                            </div>                    
                         </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <img src="./images/css3.svg" alt="Css 5" class="skicon">
-                            <p class="ml-2">CSS 3</p>
+                        <div class="skills">
+                            <!-- <img src="./images/css3.svg" alt="Css 5" class="skicon"> -->
+                            <p class="">CSS 3</p>
                         </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <img src="./images/js.jpg" alt="JavaScript" class="skicon">
-                            <p class="ml-2">JavaScript</p>
+                        <div class="skills">
+                            <!-- <img src="./images/js.jpg" alt="JavaScript" class="skicon"> -->
+                            <p class="">JavaScript</p>
                         </div>
-                        <div class="col-lg-3 col-sm-6">
-                            <img src="./images/java.png" alt="Java" class="skicon">
-                            <p class="ml-2">Java</p>
+                        <div class="skills">
+                            <!-- <img src="./images/java.png" alt="Java" class="skicon"> -->
+                            <p class="">Java</p>
                         </div>
                     </div>
                 </div>
                 <div class="container-fluid">
                     <div class="row" id="row2">
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-3 col-sm-4">
                             <img src="./images/git.png" alt="Git" class="skicon"> 
                             <p class="ml-2">Git Version Control</p> 
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-3 col-sm-4">
                             <img src="./images/mysql.png" alt="MySQL" class="skicon">
                             <p class="ml-2">MySQL</p>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
+                        <div class="col-lg-3 col-sm-4">
                             <img src="./images/jsp-servlet.png" alt="Bootsstrap" class="skicon">
                             <p class="ml-2">Servlets</p>
                         </div>
@@ -154,7 +156,7 @@
         <!--Work section-->
         <section id="workExperience">
             <div class="container">
-                <h3 class="pb-3 pt-2 heading" data-aos="fade-left">My Work Experience</h3> <hr/>
+                <h3 class="pb-3 pt-2 heading" data-aos="fade-left"><span>Work Experience</span></h3> <hr/>
                 <div class="container" data-aos="fade-up">
                 <div class="row align-items-center how-it-works d-flex">
                     <div class="col-2 text-center bottom d-inline-flex justify-content-center align-items-center">
@@ -191,8 +193,8 @@
                  <div class="col-2">&nbsp;</div>
                 <div class="col-8">&nbsp;</div>
                  <div class="container-fluid col-2">
-                    <div class="row justify-content-center btn btn-dark">
-                        <a href="./MOHAMMED MISHKATH.docx" style="color: white; width: 100%;">Download my CV</a>
+                    <div class="row justify-content-center btn btn-dark" style="color: black;">
+                        <a href="./MOHAMMED MISHKATH.docx" style="color: #fff; width: 100%;">Download my CV</a>
                     </div>
                 </div> 
             </div>
@@ -203,7 +205,7 @@
         <!--Education section-->
         <section id="education"> 
             <div class="container col-md-12">
-                <h3 class="heading"> Education</h3>
+                <h3 class="heading"> <span>Education</span></h3>
                 <hr/>
             <div class="card-deck" Style="width:80%; margin-left: 10%;">
                 <div class="col-md">
@@ -257,7 +259,7 @@
         </section>
         <footer class="container" id="contact">
             <div class="container">
-                <h3 class="heading">Contact</h3>
+                <h3 class="heading"><span>Contact</span></h3>
                 <hr/>
             <div class="row"><p class="col-lg-6 center-bold">Phone No</p><p class="col-lg-6 center-bold">Email</p></div>
             <div class="row"><p class="col-lg-6 center">9538557080</p><p class="col-lg-6 center">mishkath22@gmail.com</p></div>
@@ -279,7 +281,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script>
-            AOS.init();
+            AOS.init();           
         </script>
     </body>
 </html>
