--- a/index.html
+++ b/index.html
@@ -110,40 +110,51 @@
           </div>
           <div class="col-md-6">
             <h3 class="heading mt-4 mb-4" data-aos="fade-left"> <span>Skills</span></h3> <hr/>
-                <div class="container ">
-                    <div class="d-flex flex-row justify-content-around", id="row1">
-                        <div class="skills" id="html">
-                            <div>
+                <div class="container m-4">
+                    <div class="d-flex flex-row justify-content-around">
+                        <div class="skills" id="html" data-aos="fade-left" data-aos-duration="1000">
+                            <div class="overl">
                                 <p>HTML 5</p>
                             </div>                    
                         </div>
-                        <div class="skills">
-                            <!-- <img src="./images/css3.svg" alt="Css 5" class="skicon"> -->
-                            <p class="">CSS 3</p>
+                        <div class="skills" id="css" data-aos="fade-left" data-aos-duration="1500">
+                            <div class="overl">
+                                <p>CSS 3</p>
+                            </div>  
                         </div>
-                        <div class="skills">
-                            <!-- <img src="./images/js.jpg" alt="JavaScript" class="skicon"> -->
-                            <p class="">JavaScript</p>
+                        <div class="skills" id="js" data-aos="fade-left" data-aos-duration="2000">
+                            <div class="overl">
+                                <p>JavaScript</p>
+                            </div> 
                         </div>
-                        <div class="skills">
-                            <!-- <img src="./images/java.png" alt="Java" class="skicon"> -->
-                            <p class="">Java</p>
+                        <div class="skills" id="java" data-aos="fade-left" data-aos-duration="2500">                           
+                            <div class="overl">
+                                <p>Java</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid">
-                    <div class="row" id="row2">
-                        <div class="col-lg-3 col-sm-4">
-                            <img src="./images/git.png" alt="Git" class="skicon"> 
-                            <p class="ml-2">Git Version Control</p> 
+                <div class="container m-4">
+                    <div class="d-flex flex-row justify-content-around">
+                        <div class="skills" id="git" data-aos="fade-left" data-aos-duration="1000">
+                            <div class="overl">
+                                <p>Git</p>
+                            </div> 
                         </div>
-                        <div class="col-lg-3 col-sm-4">
-                            <img src="./images/mysql.png" alt="MySQL" class="skicon">
-                            <p class="ml-2">MySQL</p>
+                        <div class="skills" id="mySQL" data-aos="fade-left" data-aos-duration="1500">
+                            <div class="overl">
+                                <p>MySQL</p>
+                            </div> 
                         </div>
-                        <div class="col-lg-3 col-sm-4">
-                            <img src="./images/jsp-servlet.png" alt="Bootsstrap" class="skicon">
-                            <p class="ml-2">Servlets</p>
+                        <div class="skills" id="servlet" data-aos="fade-left" data-aos-duration="2000">
+                            <div class="overl">
+                                <p>Servlets</p>
+                            </div> 
+                        </div>
+                        <div class="skills" id="python" data-aos="fade-left" data-aos-duration="2500">
+                            <div class="overl">
+                                <p>Python</p>
+                            </div> 
                         </div>
                     </div>
                 </div>               
